# rdf-fabric-ontology-converter

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.sample.json  pyproject.toml  requirements.txt
.agentic/: code-validator.yaml
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  CDM_GUIDE.md  CLI_COMMANDS.md  COMMANDS.md  CONFIGURATION.md  DTDL_GUIDE.md  MAPPING_LIMITATIONS.md  PLUGIN_GUIDE.md  RDF_GUIDE.md  TESTING.md  TROUBLESHOOTING.md
samples/: sample_foaf_ontology.ttl
samples/cdm/: README.md
samples/cdm/industry/: README.md
samples/cdm/industry/automotive/: Dealer.cdm.json  Lead.cdm.json  README.md  ServiceAppointment.cdm.json  Vehicle.cdm.json  automotive.manifest.cdm.json
samples/cdm/industry/education/: Course.cdm.json  Enrollment.cdm.json  Institution.cdm.json  README.md  Student.cdm.json  education.manifest.cdm.json
samples/cdm/industry/financial-services/: Account.cdm.json  Customer.cdm.json  Loan.cdm.json  README.md  Transaction.cdm.json  banking.manifest.cdm.json
samples/cdm/industry/healthcare/: Appointment.cdm.json  Encounter.cdm.json  Patient.cdm.json  Practitioner.cdm.json  README.md  healthcare.manifest.cdm.json
samples/cdm/model-json/: README.md
samples/cdm/model-json/OrdersProducts/: model.json
samples/cdm/simple/: Contact.cdm.json  Order.cdm.json  Person.cdm.json  README.md  model.json  simple.manifest.cdm.json
samples/dtdl/: dtdl_v2_energy.json  dtdl_v2_fleet.json  dtdl_v2_smartbuilding.json  dtdl_v3_logistics.json  dtdl_v3_retail.json  dtdl_v3_smartfarm.json  dtdl_v4_datacenter.json  dtdl_v4_hospital.json  dtdl_v4_transportation.json
samples/manufacturingMedical/: medical_ontology.json
samples/plugins/: README.md  csv_schema_converter.py
samples/rdf/: ecommerce_catalog.jsonld  ecommerce_ontology.ttl  event_schema.jsonld  geography_ontology.ttl  healthcare_ontology.ttl  library_ontology.ttl  music_ontology.ttl  pizza_ontology.ttl  sample_fibo_ontology.ttl  sample_iot_ontology.ttl  sample_supply_chain_ontology.ttl  simple_person.jsonld  university_ontology.ttl  vehicle_ontology.ttl
src/: constants.py  fabric_client.py  fabric_to_ttl.py  main.py  rdf_converter.py
src/app/cli/: commands.py  format.py  helpers.py  parsers.py
src/app/cli/commands/: __init__.py  base.py
src/app/cli/commands/unified/: __init__.py  convert.py  export.py  upload.py  validate.py
src/cli/: commands.py  commands_deprecated.py  helpers.py  parsers.py
src/cli/commands/: __init__.py  base.py  common.py  dtdl.py  rdf.py
src/converters/: __init__.py  property_extractor.py  rdf_parser.py
src/core/: __init__.py  plugins.py  validators.py
src/core/compliance/: __init__.py  constants.py  dtdl_compliance.py  fabric_compliance.py  models.py  rdf_compliance.py  report_generator.py
src/core/platform/: auth.py  fabric_client.py  sdk_adapter.py
src/core/services/: __init__.py  pipeline.py
src/core/validators/: __init__.py  definition.py  fabric_limits.py  input.py  rate_limiter.py  url.py
src/dtdl/: __init__.py  cli.py  dtdl_converter.py  dtdl_models.py  dtdl_parser.py  dtdl_type_mapper.py  dtdl_validator.py
src/formats/cdm/: __init__.py  cdm_converter.py  cdm_models.py  cdm_parser.py  cdm_type_mapper.py  cdm_validator.py
src/formats/dtdl/: __init__.py  cli.py  dtdl_parser.py  mode_converters.py
src/formats/rdf/: __init__.py  preflight_validator.py  property_extractor.py  rdf_converter.py  streaming_converter.py
src/plugins/: __init__.py  base.py  protocols.py
src/plugins/builtin/: __init__.py  cdm_plugin.py
src/shared/models/: __init__.py  base.py  fabric_types.py
tests/: conftest.py  test_converter.py  test_dtdl.py  test_edge_cases.py  test_exporter.py  test_fabric_client.py  test_integration.py  test_plugins.py  test_preflight_validator.py  test_ssrf_protection.py  test_validation.py  test_validation_rate_limiting.py
tests/cdm/: __init__.py  conftest.py  test_cdm_converter.py  test_cdm_integration.py  test_cdm_parser.py  test_cdm_plugin.py  test_cdm_samples.py  test_cdm_type_mapper.py  test_cdm_validator.py
tests/cli/: __init__.py  test_cli_commands.py
tests/core/: test_fabric_client.py  test_fabric_contract.py  test_fabric_limits.py  test_resilience.py  test_ssrf_protection.py
tests/dtdl/: test_edge_cases.py
tests/fixtures/: __init__.py  config_fixtures.py  dtdl_fixtures.py  ttl_fixtures.py
tests/integration/: test_cross_format.py  test_rdf_pipeline.py
